welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:1: error: ';' expected but integer literal found.
gauche 3+
       ^Poucet:2: error: ';' expected but integer literal found.
droite 2-
       ^