welcome.lessons.welcome.loopdowhile.Poucet.scala.code
gauche 3+
droite 2-

var b=0
var c=""
do {
	for (c<-1 to 5) {
		if (estSurBiscuit) {
			b=b+1;
			avance();
		} else {
			avance();
		}
	}
}while (!sortieTrouvee())
